--- a/esp.html
+++ b/esp.html
@@ -53,6 +53,7 @@
             <div>
                 <p id="desc"> 
                     Me gusta contar historias, me potencia trabajar en equipo y me motivan los objetivos grupales. 
+                    Me siento capacitada para trabajar dentro de un equipo como desarrolladora web y/o copywriter o UX writer, pero aún no pude conseguir mi primer empleo. Quiero dar el salto del periodismo al sector IT.
                     <br>
                     <br>
                     Estuve a cargo de la redacción de Todo Noticias en el turno noche, de 8 PM a 1 AM. Gerencié un grupo de 6 personas en el último puesto que ocupé en la empresa, como Productora Ejecutiva del noticiero TN de Noche.
