--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
         <br>
             <H2>JOURNALIST & JR DEVELOPER</H2>
             <div>
-                <p id="desc"> Behind every computer or mobile device there is a person. Behind every post, a thought. 
-            
-                    My objective is to make the internet a better place. 
+                <p id="desc"> 
+                    I am a journalist, writer and TV producer with +8 years of experience. Since August 2021 I've been studying Web Development, I continue to do so. 
+                    I feel ready to work as a developer, copywriter o UX writer, but I haven't had the chance yet. I would like to get my first job in the IT sector to finally cristalize my jump from journalism to this new world.
                     <br>
                     <br>
-                    I am journalist willing to explore the digital and corporate worlds. I have experience in TV Broadcasting and digital journalism for Argentina and Spain.
+                    I learn fast and I am really motivated. I feel comfortable in challenging situations and ever-changing environments (I used to work on a 24-hr News TV Station!)
                     <br>
                     <br>
-                    Storytelling is my passion. Writing can be quite lonely so I also enjoy tasks that involve taking part of a group. I get motivated by team objectives.
+                    Storytelling is my passion. Writing can be quite lonely so I also enjoy tasks that involve taking part of a group. I like brainstorming and I get motivated by team objectives.
                     <br>
                     <br>
-                    I used to work in TN, one of the largest TV networks in Latin America. I was in charge of the night shift, from 8 pm to 1 am. I managed a group of 6 people in order to make the night edition of the TV Channel.
+                    I worked in Todo Noticias (TN), one of the largest TV networks in Latin America. I was in charge of the night shift, from 8 pm to 1 am. I managed a group of 6 people in order to make the night edition, a program called TN de Noche.
                     <br>
                     <br>
                     With regards to TV Producing, I've been everywhere: from picking up the phone to planning new products or special transmissions. I consider the videograph a key asset and I am proud to say that I have worked many years on it.
