--- a/blog.html
+++ b/blog.html
@@ -55,16 +55,13 @@
                                 <a class="text-black text-decoration-none" href="https://cimef.ar/" target="_blank"> <p>CIMEF - Centro Integral de Medicina Familiar</p> </a>
                             </li>
                             <li class="links">
+                              <a class="text-black text-decoration-none" href="https://verfur0306.github.io/coderhouse/index.html" target="_blank"> <p>Naturalmente Madera - Muebles</p> </a>
+                          </li>
+                            <li class="links">
                                 <a class="text-black  text-decoration-none" href="https://verfur0306.github.io/codoacodocomision11/integrador/" target="_blank" > <p>Trabajo Integrador - Codo a Codo</p> </a>
                             </li>
                             <li class="links">
-                                <a class="text-black text-decoration-none" href="https://verfur0306.github.io/codoacodocomision11/actividadtres/" target="_blank" > <p>Card Design - Bootstrap </p></a>
-                            </li>
-                            <li class="links">
-                                <a class="text-black text-decoration-none" href="https://www.figma.com/file/hUGUpH8fBZGqC0eJyZBzdU/ECOMUEBLES?node-id=0%3A1" target="_blank" > <p>Basic Javascript calculator </p></a>
-                            </li>
-                            <li class="links">
-                              <a class="text-black text-decoration-none" href="https://verfur0306.github.io/codoacodocomision11/javascript/" target="_blank" > <p>Figma canvas to a webpage that I am currently working on</p></a>
+                              <a class="text-black text-decoration-none" href="https://www.figma.com/proto/hUGUpH8fBZGqC0eJyZBzdU/ECOMUEBLES?node-id=14%3A172&scaling=scale-down&page-id=0%3A1" target="_blank" > <p>Figma canvas to a webpage that I am currently working on</p></a>
                           </li>
                         </ul>
                     </div>
