--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <div id="mail" class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5">
         <div class="row mt-2 p-2" data-aos="fade-up">
             <p>Contact me: veronicaafurlan@gmail.com</p>
-            <p><a href="https://www.linkedin.com/in/ver%C3%B3nica-furlan-349a7723/">Link to my Linkedin</a></p>
+            <p><a href="https://www.linkedin.com/in/verofurlan">Link to my Linkedin</a></p>
         </div>
         </div>
 
