--- a/esp.html
+++ b/esp.html
@@ -204,7 +204,7 @@
     <div id="mail" class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5">
         <div class="row mt-2 p-2" data-aos="fade-up">
             <p>Contáctame: veronicaafurlan@gmail.com</p>
-            <p><a href="https://www.linkedin.com/in/ver%C3%B3nica-furlan-349a7723/">Enlace a mi Linkedin</a></p>
+            <p><a href="https://www.linkedin.com/in/verofurlan">Enlace a mi Linkedin</a></p>
         </div>
         </div>
 
