--- a/fran.html
+++ b/fran.html
@@ -178,7 +178,7 @@
     <div id="mail" class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5">
         <div class="row mt-2 p-2" data-aos="fade-up">
             <p>Envoyez moi un e-mail: veronicaafurlan@gmail.com</p>
-            <p><a href="https://www.linkedin.com/in/ver%C3%B3nica-furlan-349a7723/">Lien a mon Linkedin</a></p>
+            <p><a href="https://www.linkedin.com/in/verofurlan">Lien a mon Linkedin</a></p>
         </div>
         </div>
        <!--footer-->
