--- a/esp.html
+++ b/esp.html
@@ -149,6 +149,13 @@
         <div class="row mt-3 p-5" data-aos="fade-up">
             <h3>EDUCACIÓN</h3>
         </div>
+        <div class="row mt-4" data-aos="fade-up">
+            <div class="mt-2">
+                <h4> CODERHOUSE - JAVASCRIPT DEVELOPER </h4>
+                 <p> <span class="material-icons md-dark">access_time_filled</span> Actualmente</p></span>   
+                <p><em>Front-end development con Javascript y React JS</em></p>
+                <a class="nav-link text-black" href="https://www.coderhouse.com/"><p><span class="material-icons md-dark">link</span>https://www.coderhouse.com/</p></a>
+            </div>
             <div class="row mt-4">
             <div class="mt-2" data-aos="fade-up">
                 <h4> CODO A CODO - DESARROLLO FULL STACK JAVASCRIPT </h4>
