--- a/fran.html
+++ b/fran.html
@@ -123,7 +123,14 @@
         <div class="row mt-3 p-5">
             <h3>ÉDUCATION</h3>
         </div>
-            <div class="row mt-4" data-aos="fade-up">
+        <div class="row mt-4" data-aos="fade-up">
+            <div class="mt-2">
+                <h4> CODERHOUSE - JAVASCRIPT DEVELOPER </h4>
+                 <p> <span class="material-icons md-dark">access_time_filled</span> maintenant</p></span>   
+                <p><em>Front end development avec Javascript et React JS</em></p>
+                <a class="nav-link text-black" href="https://www.coderhouse.com/"><p><span class="material-icons md-dark">link</span>https://www.coderhouse.com/</p></a>
+            </div>    
+        <div class="row mt-4" data-aos="fade-up">
             <div class="mt-2">
                 <h4> CODO A CODO PROGRAM - JAVASCRIPT FULL STACK DEVELOPMENT </h4>
                  <p> <span class="material-icons md-dark">access_time_filled</span> 2021</p></span>   
