--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </center>
         </div>
         <br>
-            <H2>JOURNALIST & JR DEVELOPER</H2>
+            <H2>JOURNALIST & JR FRONT-END DEVELOPER</H2>
             <div>
                 <p id="desc"> 
                     I am a journalist, writer and TV producer with +8 years of experience. Since August 2021 I've been studying Web Development, I continue to do so. 
@@ -158,6 +158,13 @@
         <div class="row mt-3 p-5" data-aos="fade-up">
             <h3>EDUCATION</h3>
         </div>
+        <div class="row mt-4" data-aos="fade-up">
+            <div class="mt-2">
+                <h4> CODERHOUSE - JAVASCRIPT DEVELOPER </h4>
+                 <p> <span class="material-icons md-dark">access_time_filled</span> Currently</p></span>   
+                <p><em>Front end development with Javascript and React JS</em></p>
+                <a class="nav-link text-black" href="https://www.coderhouse.com/"><p><span class="material-icons md-dark">link</span>https://www.coderhouse.com/</p></a>
+            </div>
             <div class="row mt-4" data-aos="fade-up">
             <div class="mt-2">
                 <h4> CODO A CODO PROGRAM - JAVASCRIPT FULL STACK </h4>
